--- a/Experiment_Website/home/home.css
+++ b/Experiment_Website/home/home.css
@@ -12,9 +12,9 @@ body {
     /* padding: 1px; */
 }
 
-.navigation_block .abt_btn, .navigation_block .ctc_btn {
-    background-color: rgb(85, 85, 83);
-    border-bottom:  solid rgb(151, 140, 77) 5px;
+.navigation_block .home_btn, .navigation_block .abt_btn, .navigation_block .ctc_btn {
+    background-color: rgb(87, 33, 33);
+    color: rgb(216, 216, 201);
     display: inline-block;
     width: 120px;
     height: 40px;
@@ -22,20 +22,29 @@ body {
     line-height: 40px;
     text-align: center;
     font-size: 30px;
+    text-decoration: none;
+    padding-right: 1px;
+    padding-left: 1px;
+
 }
 
-.navigation_block .abt_btn:hover, .navigation_block .ctc_btn:hover {
+.navigation_block .home_btn:hover, .navigation_block .abt_btn:hover, .navigation_block .ctc_btn:hover {
     background-color: rgb(216, 216, 201);
+    color:rgb(87, 33, 33);
     cursor: pointer;
+    transition-duration: 0.3s
 }
 
 
 .main_block {
     position: absolute;
     width: 100%;
-    height: 100%;
+    top: 40px;
+    bottom: 0;
     /* ref: https://www.pexels.com/search/website%20background/ */
-    background-image: url("background.jpg");
+    background-image: url("../background.jpg");
+    background-size: cover;
+    background-position: center 70%;
     background-color: rgba(0, 0, 0, 0.1);
     background-blend-mode: multiply;
     /* border: black solid 2px; */
@@ -81,4 +90,5 @@ body {
     background-color: rgb(223, 199, 65);
     color: rgb(34, 32, 20);
     font-weight: bold;
+    transition-duration: 0.5s
 }
