--- a/Experiment_Website/experiment.css
+++ b/Experiment_Website/experiment.css
@@ -84,6 +84,10 @@ body {
     margin-bottom: 25px;
 }
 
+.timer_prompt {
+    font-size: 30px;
+}
+
 .hrd_btn, .unhrd_btn {
     width: 200px;
     display: inline-block;
