--- a/Experiment_Website/experiment.css
+++ b/Experiment_Website/experiment.css
@@ -93,7 +93,7 @@ input[type="radio"] {
     display: none;
 }
 
-label {
+label[for="toggle-unhrd"], label[for="toggle-hrd"] {
   width: 200px;
   display: inline-block;
   border: solid 2px rgb(87, 33, 33);
@@ -106,7 +106,7 @@ label {
   margin-left: 10px;
 }
 
-label:hover {
+label[for="toggle-unhrd"]:hover, label[for="toggle-hrd"]:hover  {
     background-color: rgb(104, 52, 52);
     color: rgb(255, 255, 255);    
     cursor: pointer;
@@ -192,3 +192,103 @@ i.fa-volume-down, i.fa-volume-up {
 i.fa-play-circle, i.fa-pause-circle, i.fa-step-forward, i.fa-step-backward {
     cursor: pointer;
 }
+
+
+/* login popup */
+/* Full-width input fields */
+input[type=text] {
+    font-size: 30px;
+    width: 100%;
+    padding: 10px 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+  }
+  
+  /* Set a style for all buttons */
+  button {
+    background-color: #DE3A1F;
+    font-size: 30px;
+    color: white;
+    padding: 10px 10px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 25%;
+  }
+  
+  button:hover {
+    opacity: 0.8;
+  }
+  
+  
+  /* Center the image and position the close button */
+  .imgcontainer {
+    text-align: center;
+    margin: 10px 0 10px 0;
+    position: relative;
+  }
+  
+  
+  .container {
+    font-size: 50px;
+    letter-spacing: 1px;
+    text-align: center;
+    padding: 16px;
+  }
+  
+  
+  /* The Modal (background) */
+  .modal {
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    padding-top: 180px;
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    border: 1px solid #888;
+    width: 40%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button (x) */
+  .close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  
+  .close:hover, .close:focus {
+    color: red;
+    cursor: pointer;
+  }
+  
+  /* Add Zoom Animation */
+  .animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+  }
+  
+  @-webkit-keyframes animatezoom {
+    from {-webkit-transform: scale(0)} 
+    to {-webkit-transform: scale(1)}
+  }
+    
+  @keyframes animatezoom {
+    from {transform: scale(0)} 
+    to {transform: scale(1)}
+  }
+  
