--- a/Experiment_Website/experiment.css
+++ b/Experiment_Website/experiment.css
@@ -1,46 +1,14 @@
-body {
-    /* remove extra space */
-    margin: 0;
-    font-family:Arial;
-    height: 100%;
+main {
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color:rgb(219, 215, 206);  
-    /* Smoothly transition the background color */
-    transition: background-color .5s;
 }
 
-
-.navigation_block {
+.navbar {
     background-color: rgb(26, 24, 23);
-    position: relative;
-    width: 100%;   
-    /* padding: 1px; */
-    display: flex;
-    flex-direction: row;
-    align-items: center;
 }
 
-.navigation_block .home_btn, .navigation_block .abt_btn, .navigation_block .ctc_btn {
-    border: solid 1px rgb(87, 33, 33);
-    background-color: rgb(87, 33, 33);
-    color: rgb(216, 216, 201);
-    display: inline-block;
-    width: 120px;
-    height: 40px;
-    /* vertically center */
-    line-height: 40px;
-    text-align: center;
-    font-size: 30px;
-    text-decoration: none;
-    padding-right: 1px;
-    padding-left: 1px;
-    user-select: none;
-}
-
-.navigation_block .home_btn:hover, .navigation_block .abt_btn:hover, .navigation_block .ctc_btn:hover {
-    background-color: rgb(216, 216, 201);
-    color:rgb(87, 33, 33);
-    cursor: pointer;
-    transition-duration: 0.3s;
+.nav-link {
+    font-size: 1.2em;
 }
 
 .player {
@@ -196,101 +164,3 @@ i.fa-play-circle, i.fa-pause-circle, i.fa-step-forward, i.fa-step-backward {
 }
 
 
-/* login popup */
-/* Full-width input fields */
-input[type=text] {
-    font-size: 30px;
-    width: 100%;
-    padding: 10px 10px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-  }
-  
-  /* Set a style for all buttons */
-  button {
-    background-color: #DE3A1F;
-    font-size: 30px;
-    color: white;
-    padding: 10px 10px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 25%;
-  }
-  
-  button:hover {
-    opacity: 0.8;
-  }
-  
-  
-  /* Center the image and position the close button */
-  .imgcontainer {
-    text-align: center;
-    margin: 10px 0 10px 0;
-    position: relative;
-  }
-  
-  
-  .container {
-    font-size: 50px;
-    letter-spacing: 1px;
-    text-align: center;
-    padding: 16px;
-  }
-  
-  
-  /* The Modal (background) */
-  .modal {
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    padding-top: 180px;
-  }
-  
-  /* Modal Content/Box */
-  .modal-content {
-    background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
-    border: 1px solid #888;
-    width: 40%; /* Could be more or less, depending on screen size */
-  }
-  
-  /* The Close Button (x) */
-  .close {
-    position: absolute;
-    right: 25px;
-    top: 0;
-    color: #000;
-    font-size: 35px;
-    font-weight: bold;
-  }
-  
-  .close:hover, .close:focus {
-    color: red;
-    cursor: pointer;
-  }
-  
-  /* Add Zoom Animation */
-  .animate {
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s
-  }
-  
-  @-webkit-keyframes animatezoom {
-    from {-webkit-transform: scale(0)} 
-    to {-webkit-transform: scale(1)}
-  }
-    
-  @keyframes animatezoom {
-    from {transform: scale(0)} 
-    to {transform: scale(1)}
-  }
-  
