--- a/Experiment_Website/home.css
+++ b/Experiment_Website/home.css
@@ -1,97 +1,32 @@
-body {
-    /* remove extra space */
-    margin: 0;
-    font-family:Arial;
+html, body, main, .main_block {
+    height: 100%;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
-.navigation_block {
+.navbar {
     background-color: rgb(26, 24, 23);
-    position: relative;
-    width: 100%;   
-    /* padding: 1px; */
 }
 
-.navigation_block .home_btn, .navigation_block .abt_btn, .navigation_block .ctc_btn {
-    border: solid 1px rgb(87, 33, 33);
-    background-color: rgb(87, 33, 33);
-    color: rgb(216, 216, 201);
-    display: inline-block;
-    width: 120px;
-    height: 40px;
-    /* vertically center */
-    line-height: 40px;
-    text-align: center;
-    font-size: 30px;
-    text-decoration: none;
-    padding-right: 1px;
-    padding-left: 1px;
-
+.nav-link {
+    font-size: 1.2em;
 }
-
-.navigation_block .home_btn:hover, .navigation_block .abt_btn:hover, .navigation_block .ctc_btn:hover {
-    background-color: rgb(216, 216, 201);
-    color:rgb(87, 33, 33);
-    cursor: pointer;
-    transition-duration: 0.3s
-}
-
 
 .main_block {
-    position: absolute;
-    width: 100%;
-    top: 40px;
-    bottom: 0;
-    /* ref: https://www.pexels.com/search/website%20background/ */
-    background-image: url("background.jpg");
+    background-image: url("background.jpg"), linear-gradient(0deg, rgb(160, 93, 93) 0%, rgb(246, 228, 170) 100%);
+    background-repeat: no-repeat;
     background-size: cover;
-    background-position: center 70%;
+    background-position: right 35% bottom 0%;
+    /* background-position: center center; */
     background-color: rgba(0, 0, 0, 0.1);
     background-blend-mode: multiply;
-    /* border: black solid 2px; */
 }
 
 
-.description {
-    white-space: pre-line;
-
-    position: absolute;
-    /* position: relative; */
-    display: block;
-    left: 40%;
-    top: 22%;
- 
+.title {
+    white-space: pre-line; 
     color: rgb(34, 32, 20);
-    -webkit-text-stroke:rgb(63, 63, 54) 1px;
-    font-size: 80px;
     text-align: center;
-    letter-spacing: 3px;   
-    /* border: black solid 2px; */
-}
-
-.start_btn {
-    position: absolute;
-    /* position: relative; */
-    display: inline-block;
-    top: 48%;
-    left: 27.7%;
-
-    font-size: 35px;
-    border-radius: 5px;
-    color: rgb(230, 222, 212);
-    background-color: #DE3A1F;
-    text-decoration: none;
-    cursor: pointer;
-    padding:10px;
-    letter-spacing: 1px;
-    /* border: solid; */
-}
-
-.start_btn:hover {
-    background-color: rgb(223, 199, 65);
-    color: rgb(34, 32, 20);
-    font-weight: bold;
-    transition-duration: 0.5s
+    letter-spacing: 1px;   
 }
 
 
