--- a/Experiment_Website/experiment.css
+++ b/Experiment_Website/experiment.css
@@ -29,8 +29,8 @@ main {
 
 .track-art {
     margin: 25px;
-    height: 250px;
-    width: 250px;
+    height: 200px;
+    width: 200px;
     background-image: url("background.jpg");
     background-size: cover;
     border-radius: 15%;
@@ -75,6 +75,17 @@ label[for="toggle-unhrd"], label[for="toggle-hrd"], label[for="toggle-alhrd"]{
   user-select: none;
 }
 
+.glowed {
+    -webkit-animation: glowing 1500ms infinite;
+}
+
+/* ref: https://www.w3docs.com/snippets/css/how-to-create-flashing-glowing-button-using-animation-in-css3.html */
+@-webkit-keyframes glowing {
+    0% { background-color: rgb(87, 33, 33); -webkit-box-shadow: 0 0 3px rgb(87, 33, 33); }
+    50% { background-color: #8f0e0ece; -webkit-box-shadow: 0 0 40px #8f0e0ece; }
+    100% { background-color: rgb(87, 33, 33); -webkit-box-shadow: 0 0 3px rgb(87, 33, 33); }
+  }
+  
 label[for="toggle-unhrd"]:hover, label[for="toggle-hrd"]:hover, label[for="toggle-alhrd"]:hover{
     background-color: rgb(104, 52, 52);
     color: rgb(255, 255, 255);    
@@ -95,7 +106,7 @@ input[type="radio"]:checked + label {
 }
 
 .playpause-track, .prev-track, .next-track {
-    padding: 25px;
+    padding: 15px;
     opacity: 0.7;
 
     /* Smoothly transition the opacity */
