--- a/Experiment_Website/home.css
+++ b/Experiment_Website/home.css
@@ -3,7 +3,7 @@ html, body, main, .main_block {
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.navbar {
+.navbar, .btn-dark {
     background-color: rgb(26, 24, 23);
 }
 
@@ -17,15 +17,13 @@ html, body, main, .main_block {
     background-size: cover;
     background-position: right 35% bottom 0%;
     /* background-position: center center; */
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.15);
     background-blend-mode: multiply;
 }
 
 
 .title {
-    white-space: pre-line; 
     color: rgb(34, 32, 20);
-    text-align: center;
     letter-spacing: 1px;   
 }
 
