--- a/Experiment_Website/experiment.css
+++ b/Experiment_Website/experiment.css
@@ -1,5 +1,5 @@
 main {
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, 微軟正黑體;
     background-color:rgb(219, 215, 206);  
 }
 
